# portfolio-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: admin.py  auth.py  chat.py  health.py
app/core/: auth.py  config.py  constants.py  exceptions.py  logger.py  security.py
app/dependencies/: services.py
app/schemas/: auth.py  chat.py  resume.py
app/services/: auth_service.py  chat_service.py  chunking_service.py  embedding_service.py  gemini_service.py  prompt_service.py  qdrant_service.py  resume_service.py
app/utils/: pdf.py
tests/: conftest.py
tests/unit/: test_auth_service.py  test_chat_service.py  test_chunking_service.py  test_embedding_service.py  test_prompt_service.py  test_qdrant_service.py  test_resume_service.py
